# vfm

./: .gitattributes  .gitignore  README.md  descriptive_analysis.ipynb  hyperparameters.yaml  lowo.ipynb  output.csv  output_filled.csv  physics_informed.ipynb  physics_informed_gas.ipynb  pyproject.toml  well_06_ff.ipynb  well_06_swt_tft.ipynb  well_06_tft.ipynb  well_06_tft_viz.ipynb  well_transfer_learn.ipynb
data/: W06.csv  W08.csv  W10.csv  W11.csv  W15.csv  W18.csv  W19.csv
doc/: main.tex
doc/1-literature/: pgdip.txt
doc/3-pgdip/: desertation.bib
doc/4-thesis/: main.acn  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.glsdefs  main.lof  main.lot  main.out  main.tex  main.toc  references.bib  uomthesis.cls
doc/literature/: pgdip.txt
models/physics_informed_hybrid_model.pkl/: meta.pkl  ml_qg.pkl  ml_qo.pkl  ml_wc.pkl  physics_model.pkl  poly.pkl
src/: metrics.py
src/utils/: descriptive_analysis.py  descriptive_utils.py
src/vfm/: connection.py  constants.py  preprocessor.py  resampler.py
src/vfm/model/hybrid/: base_physics_informed.py  constants.py  latent_physics_informed.py  physics_informed.py
src/vfm/model/nn/: feed_forward.py  swt_tft.py  tft.py
src/vfm/model/physics/: gas_well_physics.py  generic_physics.py  oil_well_physics.py  physics_informed.py
src/vfm/model/reg/: gradient_boost.py
src/vfm/utils/: descriptive_utils.py  metrics_utils.py
